--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
   # Grafana instance configured with VictoriaLogs as datasource
   grafana:
-    image: adysis/victoriametricslogs:v1.0.3  # Use your custom image with version v1.0.1
+    image: adysis/victoriametricslogs:v1.0.4  # Use your custom image with version v1.0.1
+    build: .
     depends_on:
       - "victoriametrics"
       - "victorialogs"
