--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,9 @@ services:
         source: /var/lib/docker
         target: /var/lib/docker
       - ./vector-vl-single.yml:/etc/vector/vector.yaml:ro
-    depends_on: [victorialogs]
+    # depends_on: [victorialogs]
+    depends_on:
+      - "victorialogs"
     ports:
       - "8686:8686"
     user: root
